@@ -1,4 +1,5 @@
 
+	* Display a legend when displaying icons (edit, delete...)
 	* Issue when deleting compte :
 		-> recette / depense still exist
 		- ... but don't appear in bilan !
